collectd (5.5.0-3) UNRELEASED; urgency=medium

  * debian/rules:
    - Avoid hiding compiler options, allowing the buildd log scanner to do
      it's job.

 -- Marc Fournier <marc.fournier@camptocamp.com>  Tue, 25 Aug 2015 06:55:52 +0200

collectd (5.5.0-2) unstable; urgency=low

  * debian/rules:
    - Disable the turbostat plugin on !amd64,!i386; it's Intel-hardware
      specific.

 -- Sebastian Harl <tokkee@debian.org>  Sun, 23 Aug 2015 15:35:26 +0200

collectd (5.5.0-1) unstable; urgency=medium

  [ Marc Fournier ]
  * New upstream release:
    - Battery plugin now prefers sysfs over (the deprecated) procfs for
      reading values; thanks to Witold Baryluk for reporting this
      (Closes: #630337).
    - The configuration supports unquoted IPv6 addresses now; thanks to Geoff
      Crompton for reporting this (Closes: #632713).
    - Fixed a FTBFS using clang; thanks to Arthur Marble for reporting this
      and providing a patch (Closes: #758481).
    - collection.cgi now supports the df_complex types; thanks to Joel Franco
      Guzmán for reporting this (Closes: #739625).
    - Fixed an off-by-one error in the AVL tree implementation that broke
      setups using only one threshold definition; thanks to Alexander Golovko
      for reporting this (Closes: #754230).
    - The disk plugin now (optionally) supports instance names based on a udev
      attribute; thanks to Trent W. Buck for reporting this (Closes: #632936).
  * debian/patches:
    - Removed bts559801_plugin_find_fix.dpatch; merged upstream.
    - Removed bts747093_lvm_segfault.dpatch; merged upstream.
    - Removed bts750440_config_segfault.dpatch; merged upstream.
    - Removed bts770681_riemann_ack.dpatch; merged upstream.
    - Removed bts770683_curl_init.dpatch; merged upstream.
    - Removed bts770688_snmp_memleak.dpatch; merged upstream.
    - Removed bts770690_java_jni_thread_detach.dpatch; merged upstream.
    - Removed bts770693_timestamps.dpatch; merged upstream.