@@ -1,8 +1,10 @@
 collectd (5.5.0-3) UNRELEASED; urgency=medium
 
-  * debian/rules:
+  * debian/rules, debian/control:
     - Avoid hiding compiler options, allowing the buildd log scanner to do
       it's job.
+    - Disable smart plugin on non-linux platforms, due to missing
+      libatasmart-dev build-dependency.
 
  -- Marc Fournier <marc.fournier@camptocamp.com>  Tue, 25 Aug 2015 06:55:52 +0200
 
